re PR rtl-optimization/15068 (ICE in elim_reg_cond)

PR rtl-optimization/15068
	* flow.c (init_propagate_block_info): Check condition is reversible.

From-SVN: r85439